--- a/static/nord.css
+++ b/static/nord.css
@@ -1,309 +1,1 @@
-/*
-++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-title      Nord highlight.js                                   +
-project    nord-highlightjs                                    +
-version    0.1.0                                               +
-repository https://github.com/arcticicestudio/nord-highlightjs +
-author     Arctic Ice Studio                                   +
-email      development@arcticicestudio.com                     +
-copyright  Copyright (C) 2017                                  +
-++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-
-[References]
-Nord
-  https://github.com/arcticicestudio/nord
-highlight.js
-  http://highlightjs.readthedocs.io/en/latest/style-guide.html
-  http://highlightjs.readthedocs.io/en/latest/css-classes-reference.html
-*/
-
-.hljs,
-.hljs-subst {
-    color: #d8dee9;
-}
-
-.hljs-selector-tag {
-    color: #81a1c1;
-}
-
-.hljs-selector-id {
-    color: #8fbcbb;
-    font-weight: bold;
-}
-
-.hljs-selector-class {
-    color: #8fbcbb;
-}
-
-.hljs-selector-attr {
-    color: #8fbcbb;
-}
-
-.hljs-selector-pseudo {
-    color: #88c0d0;
-}
-
-.hljs-addition {
-    background-color: rgba(163, 190, 140, 0.5);
-}
-
-.hljs-deletion {
-    background-color: rgba(191, 97, 106, 0.5);
-}
-
-.hljs-built_in,
-.hljs-type {
-    color: #8fbcbb;
-}
-
-.hljs-class {
-    color: #8fbcbb;
-}
-
-.hljs-function {
-    color: #88c0d0;
-}
-
-.hljs-function > .hljs-title {
-    color: #88c0d0;
-}
-
-.hljs-keyword,
-.hljs-literal,
-.hljs-symbol {
-    color: #81a1c1;
-}
-
-.hljs-number {
-    color: #b48ead;
-}
-
-.hljs-regexp {
-    color: #ebcb8b;
-}
-
-.hljs-string {
-    color: #a3be8c;
-}
-
-.hljs-title {
-    color: #8fbcbb;
-}
-
-.hljs-params {
-    color: #d8dee9;
-}
-
-.hljs-bullet {
-    color: #81a1c1;
-}
-
-.hljs-code {
-    color: #8fbcbb;
-}
-
-.hljs-emphasis {
-    font-style: italic;
-}
-
-.hljs-formula {
-    color: #8fbcbb;
-}
-
-.hljs-strong {
-    font-weight: bold;
-}
-
-.hljs-link:hover {
-    text-decoration: underline;
-}
-
-.hljs-quote {
-    color: #4c566a;
-}
-
-.hljs-comment {
-    color: #4c566a;
-}
-
-.hljs-doctag {
-    color: #8fbcbb;
-}
-
-.hljs-meta,
-.hljs-meta-keyword {
-    color: #5e81ac;
-}
-
-.hljs-meta-string {
-    color: #a3be8c;
-}
-
-.hljs-attr {
-    color: #8fbcbb;
-}
-
-.hljs-attribute {
-    color: #d8dee9;
-}
-
-.hljs-builtin-name {
-    color: #81a1c1;
-}
-
-.hljs-name {
-    color: #81a1c1;
-}
-
-.hljs-section {
-    color: #88c0d0;
-}
-
-.hljs-tag {
-    color: #81a1c1;
-}
-
-.hljs-variable {
-    color: #d8dee9;
-}
-
-.hljs-template-variable {
-    color: #d8dee9;
-}
-
-.hljs-template-tag {
-    color: #5e81ac;
-}
-
-.abnf .hljs-attribute {
-    color: #88c0d0;
-}
-
-.abnf .hljs-symbol {
-    color: #ebcb8b;
-}
-
-.apache .hljs-attribute {
-    color: #88c0d0;
-}
-
-.apache .hljs-section {
-    color: #81a1c1;
-}
-
-.arduino .hljs-built_in {
-    color: #88c0d0;
-}
-
-.aspectj .hljs-meta {
-    color: #d08770;
-}
-
-.aspectj > .hljs-title {
-    color: #88c0d0;
-}
-
-.bnf .hljs-attribute {
-    color: #8fbcbb;
-}
-
-.clojure .hljs-name {
-    color: #88c0d0;
-}
-
-.clojure .hljs-symbol {
-    color: #ebcb8b;
-}
-
-.coq .hljs-built_in {
-    color: #88c0d0;
-}
-
-.cpp .hljs-meta-string {
-    color: #8fbcbb;
-}
-
-.css .hljs-built_in {
-    color: #88c0d0;
-}
-
-.css .hljs-keyword {
-    color: #d08770;
-}
-
-.diff .hljs-meta {
-    color: #8fbcbb;
-}
-
-.ebnf .hljs-attribute {
-    color: #8fbcbb;
-}
-
-.glsl .hljs-built_in {
-    color: #88c0d0;
-}
-
-.groovy .hljs-meta:not(:first-child) {
-    color: #d08770;
-}
-
-.haxe .hljs-meta {
-    color: #d08770;
-}
-
-.java .hljs-meta {
-    color: #d08770;
-}
-
-.ldif .hljs-attribute {
-    color: #8fbcbb;
-}
-
-.lisp .hljs-name {
-    color: #88c0d0;
-}
-
-.lua .hljs-built_in {
-    color: #88c0d0;
-}
-
-.moonscript .hljs-built_in {
-    color: #88c0d0;
-}
-
-.nginx .hljs-attribute {
-    color: #88c0d0;
-}
-
-.nginx .hljs-section {
-    color: #5e81ac;
-}
-
-.pf .hljs-built_in {
-    color: #88c0d0;
-}
-
-.processing .hljs-built_in {
-    color: #88c0d0;
-}
-
-.scss .hljs-keyword {
-    color: #81a1c1;
-}
-
-.stylus .hljs-keyword {
-    color: #81a1c1;
-}
-
-.swift .hljs-meta {
-    color: #d08770;
-}
-
-.vim .hljs-built_in {
-    color: #88c0d0;
-    font-style: italic;
-}
-
-.yaml .hljs-meta {
-    color: #d08770;
-}
+.hljs,.hljs-attribute,.hljs-params,.hljs-subst,.hljs-template-variable,.hljs-variable{color:#d8dee9}.apache .hljs-section,.hljs-builtin-name,.hljs-bullet,.hljs-keyword,.hljs-literal,.hljs-name,.hljs-selector-tag,.hljs-symbol,.hljs-tag,.scss .hljs-keyword,.stylus .hljs-keyword{color:#81a1c1}.hljs-selector-id{color:#8fbcbb;font-weight:700}.bnf .hljs-attribute,.cpp .hljs-meta-string,.diff .hljs-meta,.ebnf .hljs-attribute,.hljs-attr,.hljs-built_in,.hljs-class,.hljs-code,.hljs-doctag,.hljs-formula,.hljs-selector-attr,.hljs-selector-class,.hljs-title,.hljs-type,.ldif .hljs-attribute{color:#8fbcbb}.abnf .hljs-attribute,.apache .hljs-attribute,.arduino .hljs-built_in,.aspectj>.hljs-title,.clojure .hljs-name,.coq .hljs-built_in,.css .hljs-built_in,.glsl .hljs-built_in,.hljs-function,.hljs-function>.hljs-title,.hljs-section,.hljs-selector-pseudo,.lisp .hljs-name,.lua .hljs-built_in,.moonscript .hljs-built_in,.nginx .hljs-attribute,.pf .hljs-built_in,.processing .hljs-built_in{color:#88c0d0}.hljs-addition{background-color:rgba(163,190,140,.5)}.hljs-deletion{background-color:rgba(191,97,106,.5)}.hljs-number{color:#b48ead}.abnf .hljs-symbol,.clojure .hljs-symbol,.hljs-regexp{color:#ebcb8b}.hljs-meta-string,.hljs-string{color:#a3be8c}.hljs-emphasis{font-style:italic}.hljs-strong{font-weight:700}.hljs-link:hover{text-decoration:underline}.hljs-comment,.hljs-quote{color:#4c566a}.hljs-meta,.hljs-meta-keyword,.hljs-template-tag,.nginx .hljs-section{color:#5e81ac}.aspectj .hljs-meta,.css .hljs-keyword,.groovy .hljs-meta:not(:first-child),.haxe .hljs-meta,.java .hljs-meta,.swift .hljs-meta,.yaml .hljs-meta{color:#d08770}.vim .hljs-built_in{color:#88c0d0;font-style:italic}
