--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -11,9 +11,9 @@
             ><a href="/p/friends" class="header-categories-item">友情連結</a
             ><a href="/p/emblog" class="header-categories-item">關於 emblog</a>
         </div>
-        <a href="https://zeabur.com?referralCode=Edit-Mr" aria-label="廣告宣傳"
+        <!-- <a href="https://zeabur.com?referralCode=Edit-Mr" aria-label="廣告宣傳"
             ><div class="header-info"></div
-        ></a>
+        ></a> -->
         <a href="">
             <div class="header-newPost">
                 <h2>最新文章</h2>
