New home page layout

--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -6,25 +6,18 @@
     </div>
     <div class="header-right">
         <div class="header-categories">
-            <a href="/p/about" class="header-categories-item">關於本站</a
-            ><a href="/rss.xml" class="header-categories-item">RSS 文章列表</a
-            ><a href="/p/friends" class="header-categories-item">友情連結</a
-            ><a href="/p/emblog" class="header-categories-item">關於 emblog</a>
+            <a href="/p/about" class="header-categories-item">關於本站</a><a href="/rss.xml"
+                class="header-categories-item">RSS</a><a href="/p/friends"
+                class="header-categories-item">友情連結</a><a href="/p/emblog" class="header-categories-item">關於 emblog</a>
         </div>
-        <!-- <a href="https://zeabur.com?referralCode=Edit-Mr" aria-label="廣告宣傳"
-            ><div class="header-info"></div
-        ></a> -->
         <a href="">
             <div class="header-newPost">
-                <h2>最新文章</h2>
-                <img
-                    src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-                    alt=""
-                />
+                <img src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" alt="" />
                 <div class="header-newPost-hover">
                     <h3></h3>
-                </div></div
-        ></a>
+                </div>
+            </div>
+        </a>
     </div>
 </header>
 <main>
