--- a/static/style.css
+++ b/static/style.css
@@ -455,6 +455,8 @@ nav input[type="checkbox"],
 header {
     padding: 1.5rem;
     padding-top: 6rem;
+    max-width: 1700px;
+    margin: 0 auto;
 }
 
 .home-page header {
@@ -584,14 +586,10 @@ a.header-categories-item span {
 
 .header-newPost {
     background-color: #fff;
-    padding: 0.8rem;
     color: var(--black);
     position: relative;
     overflow: hidden;
-}
-
-.header-newPost h2 {
-    padding: 0.5rem;
+    height: 100%;
 }
 
 .header-newPost img {
@@ -599,6 +597,7 @@ a.header-categories-item span {
      width: 100%;
     /*aspect-ratio: 40 / 21; */
     height: 10rem;
+    max-height: 12.5rem;
     border-radius: calc(var(--border-radius) / 30 * 17.2);
     object-fit: cover;
     background: #fff;
@@ -614,9 +613,9 @@ a.header-categories-item span {
     background: linear-gradient(180deg, #00000000, #000000);
     display: flex;
     flex-direction: column-reverse;
-    padding: 1rem;
     color: #fff;
     transition: opacity 0.3s;
+    padding: 1rem;
 }
 
 .header-newPost:hover .header-newPost-hover {
@@ -2018,6 +2017,10 @@ a.friend::after {
     .header-info,
     .header-newPost {
         min-width: 20rem;
+    }
+
+    .header-newPost img{
+        height: 100%;
     }
 }
 
