Fix: home page meta, feat: box-shadow, fix: back to home post list

--- a/static/style.css
+++ b/static/style.css
@@ -22,9 +22,8 @@
     --border: solid 1px var(--light-purple);
     --border-radius: 1.875rem;
     --max-width: 1200px;
-    --dark-filter: brightness(0) invert(91%) sepia(5%) saturate(1421%)
-        hue-rotate(194deg) brightness(99%) contrast(96%);
-    --box-shadow: 0 8px 16px -4px #2c2d300c;
+    --dark-filter: brightness(0) invert(91%) sepia(5%) saturate(1421%) hue-rotate(194deg) brightness(99%) contrast(96%);
+    --box-shadow: 0 8px 16px -4px #2c2d3010;
 }
 
 html {
@@ -79,6 +78,7 @@ code:not(.hljs) {
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
+    box-shadow: 0 8px 16px -4px #2c2d3030;
 }
 
 .believe {
@@ -216,7 +216,7 @@ nav {
     top: 0;
 }
 
-.displayPost nav > * {
+.displayPost nav>* {
     filter: invert(100%);
     /* filter: invert(100%) brightness(101%); */
 }
@@ -225,7 +225,7 @@ nav {
     color: #000;
     filter: invert(1);
 } */
-.nav-sticky nav > * {
+.nav-sticky nav>* {
     filter: none;
 }
 
@@ -239,7 +239,7 @@ nav {
     border-color: var(--light-purple);
 }
 
-nav > * {
+nav>* {
     flex: 1;
 }
 
@@ -429,7 +429,7 @@ nav input[type="checkbox"],
     display: none;
 }
 
-#search-toggle:checked ~ .search-page {
+#search-toggle:checked~.search-page {
     pointer-events: all;
     opacity: 1;
 }
@@ -576,8 +576,7 @@ a.header-categories-item span {
 .header-info {
     height: 100%;
     min-height: 8rem;
-    background: url("https://cdn.emtech.cc/ad.webp") no-repeat center center /
-        cover;
+    background: url("https://cdn.emtech.cc/ad.webp") no-repeat center center / cover;
     background-size: 100% auto;
     transition: background-size 0.3s;
     cursor: pointer;
@@ -673,7 +672,7 @@ aside .adsbygoogle {
     overflow: hidden;
 }
 
-.about > .about-name {
+.about>.about-name {
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -1138,7 +1137,7 @@ body:has(#hideTags:checked) .aside-tags {
     max-height: 100%;
 }
 
-.code-toggle:checked + .code-toggle-label::after {
+.code-toggle:checked+.code-toggle-label::after {
     transform: rotate(90deg);
 }
 
@@ -1154,7 +1153,7 @@ body:has(#hideTags:checked) .hideTagsLabel::after {
     transform: rotate(90deg);
 }
 
-.aside-tags > a {
+.aside-tags>a {
     display: inline-flex;
     align-items: center;
     margin: 0 0.5rem 0.5rem 0;
@@ -1166,12 +1165,12 @@ body:has(#hideTags:checked) .hideTagsLabel::after {
         color 0.3s;
 }
 
-.aside-tags > a:hover {
+.aside-tags>a:hover {
     background-color: var(--dark-purple);
     color: #fff;
 }
 
-.aside-tags > a > div {
+.aside-tags>a>div {
     display: inline-block;
     background-color: var(--dark-purple);
     border-radius: 1000px;
@@ -1185,7 +1184,7 @@ body:has(#hideTags:checked) .hideTagsLabel::after {
         color 0.3s;
 }
 
-.aside-tags > a:hover > div {
+.aside-tags>a:hover>div {
     background-color: var(--light-purple);
     color: var(--dark-purple);
 }
@@ -1235,13 +1234,13 @@ footer {
     padding: 1.5rem;
     color: #545454;
     font-size: 0.9rem;
+    box-shadow: var(--box-shadow);
 }
 
 footer .logo {
     height: 4rem;
     margin-right: 1.5rem;
-    filter: brightness(0) invert(91%) sepia(5%) saturate(1421%)
-        hue-rotate(194deg) brightness(99%) contrast(96%);
+    filter: brightness(0) invert(91%) sepia(5%) saturate(1421%) hue-rotate(194deg) brightness(99%) contrast(96%);
 }
 
 .footer-text {
@@ -1398,6 +1397,7 @@ figure img {
     max-width: min(980px, 100%);
     position: relative;
     z-index: 2;
+    box-shadow: 0 8px 16px -4px #2c2d3054;
 }
 
 .post-thumbnail {
@@ -1409,6 +1409,7 @@ figure img {
     transform: scale(1.2);
     filter: blur(10px);
     transition: all 0.5s ease-in-out;
+    box-shadow: var(--box-shadow);
 }
 
 .post-thumbnail.loaded {
@@ -1439,6 +1440,18 @@ figure img {
     border-bottom: none;
     padding: 2rem;
     border-radius: var(--border-radius) var(--border-radius) 0 0;
+    position: relative;
+}
+
+.post-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
 }
 
 .tldr {
@@ -1456,7 +1469,7 @@ figure img {
     margin: 0 0 0.3rem 0;
 }
 
-.tldr > div {
+.tldr>div {
     border-radius: 1rem;
     border: var(--border);
     padding: 1rem;
@@ -1465,7 +1478,7 @@ figure img {
     overflow: hidden;
 }
 
-.tldr > div::before {
+.tldr>div::before {
     content: "TL;DR";
     display: block;
     color: rgba(126, 147, 212, 0.15);
@@ -1749,8 +1762,7 @@ a.friend::after {
 }
 
 .author-social img {
-    filter: brightness(0) invert(66%) sepia(33%) saturate(384%)
-        hue-rotate(188deg) brightness(88%) contrast(86%);
+    filter: brightness(0) invert(66%) sepia(33%) saturate(384%) hue-rotate(188deg) brightness(88%) contrast(86%);
     height: 1rem;
     width: 1rem;
     margin-inline: 0.2rem;
@@ -1812,28 +1824,31 @@ a.friend::after {
     color: #707070;
 }
 
-.related-posts h2 {
-    margin-bottom: 1.5rem;
-}
-
 .related-posts {
     position: relative;
     margin-top: -1rem;
-    padding: 2rem;
+    padding-top: 2rem;
     flex: 0 0 100%;
     width: 100%;
     line-height: 1.5;
     background-color: #fff;
     border: var(--border);
-    border-radius: 0 var(--border-radius) var(--border-radius)
-        var(--border-radius);
+    border-radius: 0 var(--border-radius) var(--border-radius) var(--border-radius);
+    box-shadow: var(--box-shadow);
+    overflow: hidden;
 }
 
-.related-posts > div {
+.related-posts h2 {
+    margin-left: 2rem;
+}
+
+.related-posts>div {
     display: flex;
     overflow-x: auto;
     width: 100%;
     gap: 1rem;
+    padding: 2rem;
+    padding-top: 1rem;
 }
 
 .related-posts article {
@@ -1940,16 +1955,16 @@ a.friend::after {
     margin-bottom: 1rem;
 }
 
-.post-container .notice > * {
+.post-container .notice>* {
     margin-bottom: 0.5rem;
 }
 
-.notice > *:first-child {
+.notice>*:first-child {
     font-weight: bold;
     margin-top: 0;
 }
 
-.notice > *:first-child::before {
+.notice>*:first-child::before {
     content: "";
     display: inline-block;
     width: 1em;
@@ -1959,8 +1974,9 @@ a.friend::after {
 }
 
 @media (max-width: 35rem) {
+
     nav ul,
-    .right > * {
+    .right>* {
         display: none;
     }
 
@@ -1974,6 +1990,7 @@ a.friend::after {
 }
 
 @media (max-aspect-ratio: 5/4) {
+
     aside,
     .related-posts::before,
     .related-posts::after,
@@ -2013,7 +2030,7 @@ a.friend::after {
         padding-inline: 1rem;
     }
 
-    .header-right > * {
+    .header-right>* {
         flex: 1;
     }
 
