--- a/static/style.css
+++ b/static/style.css
@@ -1449,6 +1449,7 @@ figure img {
 .post-container::before {
     content: "";
     position: absolute;
+    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
