--- a/view/partials/nav.html
+++ b/view/partials/nav.html
@@ -24,7 +24,7 @@
             aria-label="Instagram"
             ><img src="/static/img/instagram.svg" alt="Instagram"
         /></a>
-        <label for="search-toggle"
+        <label for="search-toggle" onclick="document.getElementById('search').focus()"
             ><img src="/static/img/search.svg" alt="Search"
         /></label>
     </div>
@@ -41,7 +41,7 @@
         />
         <div class="search-results"></div>
         <div class="google">
-            找不到你要的文章？試試 <a href="https://google.com">Google</a> 吧！
+            快捷鍵：<kbd>⌘</kbd> + <kbd>K</kbd>
         </div>
         <label for="search-toggle"
             ><img src="/static/img/circle-x.svg" alt="back" class="back"
