feat: cal description

--- a/view/partials/home.html
+++ b/view/partials/home.html
@@ -32,6 +32,7 @@
             <div class="categories-right" onclick="categoriesMove(1)"></div>
         </div>
         <h2 class="categories-title"></h2>
+        <p class="categories-description"></p>
         <div id="posts"></div>
         <div class="more-post"></div>
     </section>
