--- a/static/style.css
+++ b/static/style.css
@@ -885,6 +885,11 @@ aside .adsbygoogle {
 }
 
 .categories-title {
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
+
+.categories-description {
     margin-bottom: 1rem;
     text-align: center;
 }
