fixing: LINE og

--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/static/nord.css" />
         <meta name="theme-color" content="{{theme}}" />
         <meta name="og:title" content="{{title}}" />
-        <meta name="og:url" content="https://emtech.cc/p/{{id}}" />
+        <meta name="og:url" content="https://emtech.cc/p/{{postID}}" />
         <meta name="og:image" content="{{thumbnail}}" />
         <meta name="og:description" content="{{description}}" />
         <script type="application/ld+json">
