--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -9,6 +9,7 @@
         <meta name="theme-color" content="{{theme}}" />
         <meta name="og:title" content="{{title}}" />
         <meta name="og:url" content="https://emtech.cc/p/{{postID}}" />
+        <meta name="og:image" content="{{thumbnail2}}" />
         <meta name="og:image" content="{{thumbnail}}" />
         <meta name="og:description" content="{{description}}" />
         <script type="application/ld+json">
