--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -7,11 +7,10 @@
         <link rel="stylesheet" href="/static/style.css" />
         <link rel="stylesheet" href="/static/nord.css" />
         <meta name="theme-color" content="{{theme}}" />
-        <meta name="og:title" content="{{title}}" />
-        <meta name="og:url" content="https://emtech.cc/p/{{postID}}" />
-        <meta name="og:image" content="{{thumbnail2}}" />
-        <!-- <meta name="og:image" content="{{thumbnail}}" /> -->
-        <meta name="og:description" content="{{description}}" />
+        <meta property="og:title" content="{{title}}" />
+        <meta property="og:url" content="https://emtech.cc/p/{{postID}}" />
+        <meta property="og:image" content="{{thumbnail}}" />
+        <meta property="og:description" content="{{description}}" />
         <script type="application/ld+json">
             [    {
                     "@context": "https://schema.org",
