feat: sponsor link

--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -60,14 +60,15 @@
                             ><img src="/static/img/instagram.svg" alt=""
                         /></a>
                     </div>
-                    <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
+                    <p>把簡單的事做得不簡單。</p>
                     <div class="author-copyright">
-                        本文為原創文章，採
+                        本部落格皆屬原創文章，採
                         <a
                             href="https://creativecommons.org/licenses/by-sa/4.0/deed.zh-hant"
                             >CC BY-SA 4.0</a
                         >
-                        授權，轉載請註明來自毛哥EM資訊密技。
+                        授權，轉載請註明來自毛哥EM資訊密技。<br>
+                        這篇文章對你有幫助嗎？<a href="https://www.buymeacoffee.com/elvismao">考慮幫我買瓶 Red Bull？</a>
                     </div>
                 </div>
                 <div class="post-tags">標籤：{{postTags}}</div>
