post: Taiwan WSDC 心得

--- a/view/partials/about.html
+++ b/view/partials/about.html
@@ -3,7 +3,7 @@
         <img src="/static/img/EMprofile.png" alt="Elvis Mao" />
         毛哥EM
     </div>
-    <p>一位喜歡把簡單的事，做得不簡單的高三生。</p>
+    <p>數位創作者，全端工程龍。</p>
     <div class="about-links">
         <a
             href="https://github.com/Edit-Mr/"
