--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -60,7 +60,7 @@
                             ><img src="/static/img/instagram.svg" alt=""
                         /></a>
                     </div>
-                    <p>把簡單的事做得不簡單。</p>
+                    <p>數位創作者，全端工程龍。</p>
                     <div class="author-copyright">
                         本部落格皆屬原創文章，採
                         <a
