縮圖先載入#184

--- a/view/partials/post.html
+++ b/view/partials/post.html
@@ -29,6 +29,7 @@
                 <img
                     src="{{thumbnail}}"
                     class="post-thumbnail"
+                    fetchpriority="high"
                     alt="{{title}}"
                     onload="this.classList.add('loaded')"
                 />
