--- a/static/style.css
+++ b/static/style.css
@@ -1796,6 +1796,7 @@ a.friend::after {
     display: block;
     object-fit: cover;
     margin-right: 1rem;
+    background-color: #FFF;
 }
 
 .author-avatar {
