--- a/view/pages/404.html
+++ b/view/pages/404.html
@@ -20,8 +20,9 @@
                 text-align: center;
             }
         </style>
+        <script src="https://font.emtech.cc/emfont.js"></script>
     </head>
-    <body>
+    <body class="emfont-LINESeedTW">
         {{nav}}
         <main>
             <h1>找不到頁面</h1>
@@ -36,6 +37,9 @@
             </div>
         </main>
         {{footer}}
+        <script>
+            emfont.init();
+        </script>
         <!-- <script src="/static/script.js"></script> -->
     </body>
 </html>
