--- a/view/pages/home.html
+++ b/view/pages/home.html
@@ -41,8 +41,9 @@
                 }
             }
         </script>
+        <script src="https://font.emtech.cc/emfont.js"></script>
     </head>
-    <body class="">
+    <body class="emfont-LINESeedTW">
         {{nav}}
         <input type="checkbox" id="hideTags" />
         <div class="main-container post-page"></div>
