--- a/view/pages/post.html
+++ b/view/pages/post.html
@@ -43,8 +43,9 @@
                 {{BreadcrumbList}}
                 ]
         </script>
+        <script src="https://font.emtech.cc/emfont.js"></script>
     </head>
-    <body class="displayPost">
+    <body class="displayPost emfont-LINESeedTW">
         {{nav}}
         <input type="checkbox" id="hideTags" />
         <div class="main-container post-page">{{post}}</div>
